--- a/data_partners.qmd
+++ b/data_partners.qmd
@@ -19,14 +19,17 @@ source('functions.R')
 #| eval: false
 overdue30to89 <- credit_card.overdue_3089()
 loan_amt <-  credit_card.loan_amount()
+loan_amt_ratio <-  credit_card.loan_amount_ratio_calc()
 loan_unused <- credit_card.unused()
-loan_unused_ratio <- credit_card.unused_ratio()
+loan_unused_ratio <- credit_card.unused_ratio_calc()
+loan_unused_proportion <- credit_card.unused_proportion()
+loan_proportion <- credit_card.loan_proportion()
+
 partner_data <- credit_card.partnerships() 
-
-selected_measures <- bind_rows(loan_amt,loan_unused,loan_unused_ratio)
-
 partner_data |> pmap(partnership.plot,overdue30to89, "value_diff")
-partner_data |> pmap(partnership.plot,selected_measures, "value_diff")
+partner_data |> pmap(partnership.plot,bind_rows(loan_amt,loan_amt_ratio,loan_proportion), "value_diff")
+partner_data |> pmap(partnership.plot,bind_rows(loan_unused,loan_unused_ratio,loan_unused_proportion), "value_diff")
+
 ```
 
 
@@ -36,26 +39,32 @@ partner_data |> pmap(partnership.plot,selected_measures, "value_diff")
 
 ![Changes in the target variable "30-89 days overdue as a % of total credit cards"](images/GAP_UBPRE524_partnership.png){#fig-gap}
 
-![Alternative Measures](images/GAP_UBPR3815_UBPRB538_UBPRE263_partnership.png){#fig-gap-multiple}
+![Loan Measures](images/GAP_UBPRB538_UBPRB538C_UBPRE425_partnership.png){#fig-gap-loan}
 
-we can see that "source: https://cards.barclaycardus.com/banking/about-us/newsroom/gap-inc--signs-credit-card-program-agreements-with-barclays-and-/ <br> https://www.businesswire.com/news/home/20220608006113/en/Gap-Inc.-Launches-New-Credit-Card-Program-in-Partnership-with-Barclays-and-Mastercard"
+![Unused Commitment Measures](images/GAP_UBPR3815_UBPR3815C_UBPR3815CP_partnership){#fig-gap-commit}
+
+source: [@gap2021; and @gap2022]
 
 ## Cosco
 
 ![Changes in the target variable "30-89 days overdue as a % of total credit cards"](images/Cosco_UBPRE524_partnership.png){#fig-cosco}
 
-![Alternative Measures](images/Cosco_UBPR3815_UBPRB538_UBPRE263_partnership.png){#fig-cosco-multiple}
+![Loan Measures](images/Cosco_UBPRB538_UBPRB538C_UBPRE425_partnership.png){#fig-cosco-loan}
 
-"source: https://corporate.walmart.com/news/2018/07/26/walmart-and-capital-one-sign-credit-card-program-agreement <br>
-                https://www.spglobal.com/marketintelligence/en/news-insights/trending/VHYZBHXtY1xdBCP2sIlmag2"
+![Unused Commitment Measures](images/Cosco_UBPR3815_UBPR3815C_UBPR3815CP_partnership.png){#fig-cosco-commit}
+
+source: @cosco2016
+
 
 ## Walmart
 ![Changes in the target variable "30-89 days overdue as a % of total credit cards"](images/Walmart_UBPRE524_partnership.png){#fig-walmart}
 
-![Alternative Measures](images/Walmart_UBPR3815_UBPRB538_UBPRE263_partnership.png)
+![Loan Measures](images/Walmart_UBPRB538_UBPRB538C_UBPRE425_partnership.png){#fig-walmart-loan}
 
-"source: https://corporate.walmart.com/news/2018/07/26/walmart-and-capital-one-sign-credit-card-program-agreement <br>
-                https://www.spglobal.com/marketintelligence/en/news-insights/trending/VHYZBHXtY1xdBCP2sIlmag2"
+![Unused Commitment Measures](images/Walmart_UBPR3815_UBPR3815C_UBPR3815CP_partnership.png){#fig-walmart-commit}
+
+
+source: [@walmart2018; and @walmart2019]
 :::
 
 the mean of the peer groups (Large Banks and Large Credit Card Banks) shows changes that may be due to all Banks rather than due to the partnership. 
