--- a/references.bib
+++ b/references.bib
@@ -86,5 +86,46 @@
   title = {Introduction to the tsfeatures package},
   url = {https://cran.r-project.org/web/packages/tsfeatures/vignettes/tsfeatures.html}
 },
+@website{walmart2018,
+  title = {Walmart and Capital One Sign Credit Card Program Agreement},
+  author = {Walmart},
+  year = {2018},
+  month = {July},
+  day = {26},
+  url = {https://corporate.walmart.com/news/2018/07/26/walmart-and-capital-one-sign-credit-card-program-agreement}
+},
+@website{walmart2019,
+  title = {Capital One to acquire Walmart's credit card receivables},
+  author = {S&P Global Market Intelligence},
+  year = {2019},
+  month = {January},
+  day = {22},
+  url = {https://www.spglobal.com/marketintelligence/en/news-insights/trending/VHYZBHXtY1xdBCP2sIlmag2}
+},
+@website{gap2021,
+  title = {Gap Inc. Signs Credit Card Program Agreements with Barclays and Mastercard},
+  author = {Barclays},
+  year = {2021},
+  month = {April},
+  day = {13},
+  url = {https://cards.barclaycardus.com/banking/about-us/newsroom/gap-inc--signs-credit-card-program-agreements-with-barclays-and-/}
+},
+@website{gap2022,
+  title = {Gap Inc. Launches New Credit Card Program in Partnership with Barclays and Mastercard},
+  author = {Businesswire},
+  year = {2022},
+  month = {June},
+  day = {9},
+  url = {https://www.businesswire.com/news/home/20220608006113/en/Gap-Inc.-Launches-New-Credit-Card-Program-in-Partnership-with-Barclays-and-Mastercard}
+},
+@website{cosco2016,
+  title = {Citi Completes Acquisition and Conversion of Costco U.S. Co-Brand Card Portfolio},
+  author = {Businesswire},
+  year = {2016},
+  month = {June},
+  day = {20},
+  url = {https://www.businesswire.com/news/home/20160620005363/en/Citi-Completes-Acquisition-and-Conversion-of-Costco-U.S.-Co-Brand-Card-Portfolio}
+},
+
 
 
