--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,12 @@
   day = {20},
   url = {https://www.businesswire.com/news/home/20160620005363/en/Citi-Completes-Acquisition-and-Conversion-of-Costco-U.S.-Co-Brand-Card-Portfolio}
 },
-
+@website{redditBarc,
+  title = {Gap Card changing from Synchrony to Barclays},
+  author = {Reddit},
+  year = {2022},
+  month = {March},
+  url = {https://reddit.com/r/CreditCards/comments/t5ihr4/gap_card_changing_from_synchrony_to_barclays/}
+}
 
 
