--- a/data_fed.qmd
+++ b/data_fed.qmd
@@ -13,14 +13,34 @@ recessions <- us_economy.recession() |>
 
 us_measures_scaled <- us_measures |>
                         mutate(B069RC1.Pop = B069RC1/POPTHM) |>
-                        mutate(B069RC1.CPI = B069RC1.Pop/CPIAUCSL) |>
+                        mutate(B069RC1.CPI = B069RC1.Pop/PCEPI) |>
                         mutate(across(!Month, scale))
 
-              
+confidence_postreg <- us_measures |> select(CSCICP03USM665S) |> 
+                        mutate(Quarter = yearquarter(Month)) |>
+                        filter_index(get_regulation_cutoff() ~ .) |>
+                        index_by(Quarter) |>
+                        summarise(mean_val = mean(CSCICP03USM665S)) 
+                        
+                        
+confidence_postreg |> autoplot(mean_val) 
+
+
+
+us_measures_scaled |> select(CSCICP03USM665S) |> View()
+    na.omit() |>
+    mutate(Quarter = yearquarter(Month)) |>
+     index_by(Quarter) |> 
+     filter_index(get_regulation_cutoff() ~ .) |> write.csv("monthly.xls")
+
+us_measures_scaled |> select(CSCICP03USM665S) |>
+    na.omit() |>
+    filter_index("2010 Jun" ~ .) |> write.csv("quarterly.xls")
+
 us_measures_scaled |> 
     na.omit() |>
     pivot_longer(cols = !Month) |>
-    autoplot(value)+ facet_wrap(~ name, scales = "free_y" , ncol = 1) +
+    autoplot(value)+ facet_wrap(~ name, scales = "free_y" , ncol = 3) +
     theme(strip.text = element_text(size = 14), legend.position = "none") +
     labs(y = "Normalised (Normal=0)") 
 
