--- a/data_fed.qmd
+++ b/data_fed.qmd
@@ -1,3 +1,4 @@
+
 ```{r}
 #| echo: false
 #| warning: false
@@ -6,36 +7,92 @@ source('functions.R')
 ```{r}
 #| echo: false
 #| warning: false
-us_measures <- us_economy() 
+
+#inflation
+#https://aeturrell.github.io/coding-for-economists/time-series.html#adjusting-for-inflation
+#PCEPI
+
+
+
+us_measures <- us_economy() |>
+                mutate(B069RC1.Pop = B069RC1/POPTHM) |>
+                mutate(B069RC1.CPI = B069RC1.Pop/PCEPI) |> na.omit()
+
 recessions <- us_economy.recession() |> 
                 filter(Flag == 1, 
-                       yearmonth(Month) >= yearmonth('1992-01-01'))
+                       yearmonth(Month) >= yearmonth(as.Date('1992-01-01')))
+
+
+overdue30to89 <- credit_card.overdue_3089(T) |> 
+                   summarise(target_mean = mean(Value),
+                    target_median = median(Value)) |> na.omit()
+
+overdue30to89.lcbank <-  credit_card.overdue_3089(T) |> 
+                        filter(BankType == "LargeCreditCardBank") |> 
+                        summarise(target_mean = mean(Value),
+                        target_median = median(Value)) |> na.omit()
+
+overdue30to89.lbank <-  credit_card.overdue_3089(T) |> 
+                        filter(BankType == "LargeBank") |> 
+                        summarise(target_mean = mean(Value),
+                        target_median = median(Value)) |> na.omit()                        
 
 us_measures_scaled <- us_measures |>
-                        mutate(B069RC1.Pop = B069RC1/POPTHM) |>
-                        mutate(B069RC1.CPI = B069RC1.Pop/PCEPI) |>
                         mutate(across(!Month, scale))
 
-confidence_postreg <- us_measures |> select(CSCICP03USM665S) |> 
-                        mutate(Quarter = yearquarter(Month)) |>
-                        filter_index(get_regulation_cutoff() ~ .) |>
-                        index_by(Quarter) |>
-                        summarise(mean_val = mean(CSCICP03USM665S)) 
-                        
-                        
-confidence_postreg |> autoplot(mean_val) 
+us_measures_qtr <- us_measures |>
+                    mutate(Quarter = yearquarter(Month)) |>
+                    filter(Quarter >= yearquarter(get_regulation_cutoff())) |>
+                    index_by(Quarter) |>
+                    summarise(across(!Month, mean))
+
+
+overdue30to89 |> pull(target_mean) |> tseries::adf.test(k=4)
+tseries::adf.test(us_measures_qtr$CSCICP03USM665S, k=4)
+
+######### % change 
+us_measures_qtr_pctchange <- us_measures_qtr |> 
+                                mutate(across(!Quarter, ~difference(.)/lag(.) *100))
+
+overdue30to89_pctchange <- overdue30to89 |> group_by(BankType) |> mutate(across(!Quarter, ~difference(.)/lag(.) *100))
+
+overdue30to89_pctchange |> na.omit() |> autoplot(target_median) + facet_wrap(~BankType)
+us_measures_qtr_pctchange |> select(CSCICP03USM665S) |> autoplot()
+
+######### % change 
+
+
+granger_data |> 
+    select(c("target_mean", "target_median", "CSCICP03USM665S")) |>
+    pivot_longer(cols = where(is.numeric)) |>
+    na.omit() |> 
+    autoplot(value) + facet_wrap(~BankType) 
+
+run_granger_test <- function(data, target_variable, exog_variable, order = 4) {
+    if (is.numeric(data[[exog_variable]])) {
+            grangertest(data[[target_variable]], data[[exog_variable]], order = order) |> as_tibble() |> na.omit() |> tibble::add_column(exog_variable)
+    }
+}
+
+granger_data <- overdue30to89 |> left_join (us_measures_qtr,by = join_by(Quarter))
+
+us_measures_qtr |> names() |>
+        purrr::map(\(x) run_granger_test(overdue30to89 |> left_join (us_measures_qtr,by = join_by(Quarter)), "target_mean", x, 4)) |> list_rbind() |> arrange(`Pr(>F)`) |> slice_head(n=10)
+
+us_measures_qtr |> names() |>
+        purrr::map(\(x) run_granger_test(overdue30to89.lbank |> left_join (us_measures_qtr,by = join_by(Quarter)), "target_mean", x, 4)) |> list_rbind() |> arrange(`Pr(>F)`) |> slice_head(n=6)
+
+us_measures_qtr |> names() |>
+        purrr::map(\(x) run_granger_test(overdue30to89.lcbank |> left_join (us_measures_qtr,by = join_by(Quarter)), "target_mean", x, 4)) |> list_rbind() |> arrange(`Pr(>F)`)|> slice_head(n=5)
+        
 
 
 
-us_measures_scaled |> select(CSCICP03USM665S) |> View()
-    na.omit() |>
-    mutate(Quarter = yearquarter(Month)) |>
-     index_by(Quarter) |> 
-     filter_index(get_regulation_cutoff() ~ .) |> write.csv("monthly.xls")
 
-us_measures_scaled |> select(CSCICP03USM665S) |>
-    na.omit() |>
-    filter_index("2010 Jun" ~ .) |> write.csv("quarterly.xls")
+run_granger_test(granger_data,"target_median", "CSCICP03USM665S")  |>
+    as_tibble() |> na.omit()
+
+#https://davegiles.blogspot.com/2011/04/testing-for-granger-causality.html
 
 us_measures_scaled |> 
     na.omit() |>
@@ -57,7 +114,7 @@ us_measures_scaled |>
     geom_rect(data = recessions,inherit.aes = FALSE, aes(xmin = Month, xmax = Month + 30, ymin = -Inf, ymax = Inf), fill = "lightgrey", alpha = 0.5) +
     labs(title = "Macro Economic Measures (data series id)",
         subtitle = "grey areas indicate recessions",
-        ) +theme_bw() +
+        ) +
     theme(legend.position = 'none',strip.text = element_text(size = 14)) +
     xlab("")
         
